# RaylibTemplate

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CREDITS.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.txt  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  docs.yml  pipeline.yml
docs/: ARCHITECTURE.md  Doxyfile.in
include/: Boss.h  Common.h  ConfigManager.h  EndScenes.h  Enemy.h  EventManager.h  FloatingTextManager.h  Game.h  GameplayScene.h  InputManager.h  LocalizationManager.h  Logger.h  MenuScene.h  OptionsScene.h  ParticleManager.h  Player.h  Profiling.h  ResourceManager.h  Scene.h  Utils.h
resources/lang/: en.txt  pt.txt
resources/shaders/: bloom.fs  retro.fs
scripts/: pack_assets.py  run_visual_test.cmake  validate_assets.py  validate_translations.py  verify_performance.py  verify_visuals.py
src/: Boss.cpp  ConfigManager.cpp  EndScenes.cpp  Enemy.cpp  FloatingTextManager.cpp  Game.cpp  GameplayScene.cpp  InputManager.cpp  LocalizationManager.cpp  Logger.cpp  MenuScene.cpp  OptionsScene.cpp  ParticleManager.cpp  Player.cpp  ResourceManager.cpp  Utils.cpp  main.cpp
tests/: test_logic.cpp
